@@ -20,8 +20,8 @@ BOOL SQLGetInstalledDrivers(	LPSTR	pszBuf,
 	WORD	nBufPos		= 0;
 	WORD	nToCopySize	= 0;
 	char	szObjectName[INI_MAX_OBJECT_NAME+1];
-    char    szIniName[ INI_MAX_OBJECT_NAME + 1 ];
-	char 	b1[ 256 ], b2[ 256 ];
+    char    szIniName[ ODBC_FILENAME_MAX * 2 + 1 ];
+	char 	b1[ ODBC_FILENAME_MAX + 1 ], b2[ ODBC_FILENAME_MAX + 1 ];
 
     inst_logClear();
 
